# cyrano

./: Cyrano.hs  Ngram.hs  Server.hs  kjv1.txt  ngram.cabal
